codeProjet/src/parser.output
Terminaux inutilisés dans la grammaire

   OP_PTR


Grammaire

    0 $accept: Program $end

    1 Program: ProgramHeader SEP_SCOL Block SEP_DOT

    2 ProgramHeader: KW_PROGRAM TOK_IDENT

    3 Block: BlockDeclConst BlockDeclType BlockDeclVar BlockDeclFunc BlockCode

    4 BlockSimple: BlockDeclConst BlockDeclType BlockDeclVar BlockCode

    5 BlockDeclConst: KW_CONST ListDeclConst
    6               | /* vide */

    7 ListDeclConst: ListDeclConst DeclConst
    8              | DeclConst

    9 DeclConst: TOK_IDENT OP_EQ Expression SEP_SCOL
   10          | TOK_IDENT SEP_DOTS BaseType OP_EQ Expression SEP_SCOL

   11 BlockDeclType: KW_TYPE ListDeclType
   12              | /* vide */

   13 ListDeclType: ListDeclType DeclType
   14             | DeclType

   15 DeclType: TOK_IDENT OP_EQ Type SEP_SCOL

   16 Type: UserType
   17     | SimpleType

   18 UserType: EnumType
   19         | InterType
   20         | ArrayType
   21         | RecordType

   22 SimpleType: BaseType
   23           | TOK_IDENT

   24 BaseType: KW_INTEGER
   25         | KW_REAL
   26         | KW_BOOLEAN
   27         | KW_CHAR
   28         | KW_STRING

   29 EnumType: SEP_PO ListEnumValue SEP_PF

   30 ListEnumValue: ListEnumValue SEP_COMMA TOK_IDENT
   31              | TOK_IDENT

   32 InterType: InterBase SEP_DOTDOT InterBase

   33 InterBase: TOK_IDENT
   34          | TOK_INTEGER
   35          | TOK_CHAR

   36 ArrayType: KW_ARRAY SEP_CO ArrayIndex SEP_CF KW_OF SimpleType

   37 ArrayIndex: TOK_IDENT
   38           | InterType

   39 RecordType: KW_RECORD RecordFields KW_END

   40 RecordFields: RecordFields SEP_SCOL RecordField
   41             | RecordField

   42 RecordField: ListIdent SEP_DOTS SimpleType

   43 BlockDeclVar: KW_VAR ListDeclVar
   44             | /* vide */

   45 ListDeclVar: ListDeclVar DeclVar
   46            | DeclVar

   47 DeclVar: ListIdent SEP_DOTS SimpleType SEP_SCOL

   48 ListIdent: ListIdent SEP_COMMA TOK_IDENT
   49          | TOK_IDENT

   50 BlockDeclFunc: ListDeclFunc SEP_SCOL
   51              | /* vide */

   52 ListDeclFunc: ListDeclFunc SEP_SCOL DeclFunc
   53             | DeclFunc

   54 DeclFunc: ProcDecl
   55         | FuncDecl

   56 ProcDecl: ProcHeader SEP_SCOL BlockSimple

   57 ProcHeader: ProcIdent
   58           | ProcIdent FormalArgs

   59 ProcIdent: KW_PROC TOK_IDENT

   60 FormalArgs: SEP_PO ListFormalArgs SEP_PF

   61 ListFormalArgs: ListFormalArgs SEP_SCOL FormalArg
   62               | FormalArg

   63 FormalArg: ValFormalArg
   64          | VarFormalArg

   65 ValFormalArg: ListIdent SEP_DOTS SimpleType

   66 VarFormalArg: KW_VAR ListIdent SEP_DOTS SimpleType

   67 FuncDecl: FuncHeader SEP_SCOL BlockSimple

   68 FuncHeader: FuncIdent FuncResult
   69           | FuncIdent FormalArgs FuncResult

   70 FuncIdent: KW_FUNC TOK_IDENT

   71 FuncResult: SEP_DOTS SimpleType

   72 BlockCode: KW_BEGIN ListInstr KW_END
   73          | KW_BEGIN ListInstr SEP_SCOL KW_END
   74          | KW_BEGIN KW_END

   75 ListInstr: ListInstr SEP_SCOL Instr
   76          | Instr

   77 Instr: KW_WHILE Expression KW_DO Instr
   78      | KW_REPEAT ListInstr KW_UNTIL Expression
   79      | KW_FOR TOK_IDENT OP_AFFECT Expression ForDirection Expression KW_DO Instr
   80      | KW_IF Expression KW_THEN Instr
   81      | KW_IF Expression KW_THEN Instr KW_ELSE Instr
   82      | VarExpr OP_AFFECT Expression
   83      | TOK_IDENT SEP_PO ListeExpr SEP_PF
   84      | TOK_IDENT
   85      | KW_WRITE SEP_PO ListeExpr SEP_PF
   86      | KW_WRITELN SEP_PO ListeExpr SEP_PF
   87      | KW_READ SEP_PO VarExpr SEP_PF
   88      | KW_WRITELN
   89      | BlockCode

   90 ForDirection: KW_TO
   91             | KW_DOWNTO

   92 Expression: MathExpr
   93           | CompExpr
   94           | BoolExpr
   95           | AtomExpr
   96           | VarExpr
   97           | TOK_IDENT SEP_PO ListeExpr SEP_PF

   98 MathExpr: Expression OP_ADD Expression
   99         | Expression OP_SUB Expression
  100         | Expression OP_MUL Expression
  101         | Expression OP_SLASH Expression
  102         | Expression KW_DIV Expression
  103         | Expression KW_MOD Expression
  104         | Expression OP_EXP Expression
  105         | OP_SUB Expression
  106         | OP_ADD Expression

  107 CompExpr: Expression OP_EQ Expression
  108         | Expression OP_NEQ Expression
  109         | Expression OP_LT Expression
  110         | Expression OP_LTE Expression
  111         | Expression OP_GT Expression
  112         | Expression OP_GTE Expression

  113 BoolExpr: Expression KW_AND Expression
  114         | Expression KW_OR Expression
  115         | Expression KW_XOR Expression
  116         | KW_NOT Expression

  117 AtomExpr: SEP_PO Expression SEP_PF
  118         | TOK_INTEGER
  119         | TOK_REAL
  120         | TOK_BOOLEAN
  121         | TOK_CHAR
  122         | TOK_STRING

  123 VarExpr: TOK_IDENT
  124        | VarExpr SEP_CO Expression SEP_CF
  125        | VarExpr SEP_DOT TOK_IDENT

  126 ListeExpr: ListeExpr SEP_COMMA Expression
  127          | Expression


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
KW_PROGRAM (258) 2
KW_CONST (259) 5
KW_TYPE (260) 11
KW_VAR (261) 43 66
KW_ARRAY (262) 36
KW_OF (263) 36
KW_RECORD (264) 39
KW_BEGIN (265) 72 73 74
KW_END (266) 39 72 73 74
KW_DIV (267) 102
KW_MOD (268) 103
KW_AND (269) 113
KW_OR (270) 114
KW_XOR (271) 115
KW_NOT (272) 116
KW_IF (273) 80 81
KW_THEN (274) 80 81
KW_ELSE (275) 81
KW_WHILE (276) 77
KW_DO (277) 77 79
KW_REPEAT (278) 78
KW_UNTIL (279) 78
KW_FOR (280) 79
KW_TO (281) 90
KW_DOWNTO (282) 91
KW_PROC (283) 59
KW_FUNC (284) 70
KW_INTEGER (285) 24
KW_REAL (286) 25
KW_BOOLEAN (287) 26
KW_CHAR (288) 27
KW_STRING (289) 28
KW_WRITE (290) 85
KW_WRITELN (291) 86 88
KW_READ (292) 87
SEP_SCOL (293) 1 9 10 15 40 47 50 52 56 61 67 73 75
SEP_DOT (294) 1 125
SEP_DOTS (295) 10 42 47 65 66 71
SEP_DOTDOT (296) 32
SEP_COMMA (297) 30 48 126
SEP_CO (298) 36 124
SEP_CF (299) 36 124
SEP_PO (300) 29 60 83 85 86 87 97 117
SEP_PF (301) 29 60 83 85 86 87 97 117
OP_EQ (302) 9 10 15 107
OP_NEQ (303) 108
OP_LT (304) 109
OP_LTE (305) 110
OP_GT (306) 111
OP_GTE (307) 112
OP_ADD (308) 98 106
OP_SUB (309) 99 105
OP_MUL (310) 100
OP_SLASH (311) 101
OP_EXP (312) 104
OP_AFFECT (313) 79 82
TOK_IDENT (314) 2 9 10 15 23 30 31 33 37 48 49 59 70 79 83 84 97 123
    125
TOK_INTEGER (315) 34 118
TOK_REAL (316) 119
TOK_BOOLEAN (317) 120
TOK_CHAR (318) 35 121
TOK_STRING (319) 122
OP_POS (320)
OP_NEG (321)
OP_PTR (322)
OP_DOT (323)
KW_IFX (324)


Non-terminaux, suivis des règles où ils apparaissent

$accept (70)
    à gauche: 0
Program (71)
    à gauche: 1, à droite: 0
ProgramHeader (72)
    à gauche: 2, à droite: 1
Block (73)
    à gauche: 3, à droite: 1
BlockSimple (74)
    à gauche: 4, à droite: 56 67
BlockDeclConst (75)
    à gauche: 5 6, à droite: 3 4
ListDeclConst (76)
    à gauche: 7 8, à droite: 5 7
DeclConst (77)
    à gauche: 9 10, à droite: 7 8
BlockDeclType (78)
    à gauche: 11 12, à droite: 3 4
ListDeclType (79)
    à gauche: 13 14, à droite: 11 13
DeclType (80)
    à gauche: 15, à droite: 13 14
Type (81)
    à gauche: 16 17, à droite: 15
UserType (82)
    à gauche: 18 19 20 21, à droite: 16
SimpleType (83)
    à gauche: 22 23, à droite: 17 36 42 47 65 66 71
BaseType (84)
    à gauche: 24 25 26 27 28, à droite: 10 22
EnumType (85)
    à gauche: 29, à droite: 18
ListEnumValue (86)
    à gauche: 30 31, à droite: 29 30
InterType (87)
    à gauche: 32, à droite: 19 38
InterBase (88)
    à gauche: 33 34 35, à droite: 32
ArrayType (89)
    à gauche: 36, à droite: 20
ArrayIndex (90)
    à gauche: 37 38, à droite: 36
RecordType (91)
    à gauche: 39, à droite: 21
RecordFields (92)
    à gauche: 40 41, à droite: 39 40
RecordField (93)
    à gauche: 42, à droite: 40 41
BlockDeclVar (94)
    à gauche: 43 44, à droite: 3 4
ListDeclVar (95)
    à gauche: 45 46, à droite: 43 45
DeclVar (96)
    à gauche: 47, à droite: 45 46
ListIdent (97)
    à gauche: 48 49, à droite: 42 47 48 65 66
BlockDeclFunc (98)
    à gauche: 50 51, à droite: 3
ListDeclFunc (99)
    à gauche: 52 53, à droite: 50 52
DeclFunc (100)
    à gauche: 54 55, à droite: 52 53
ProcDecl (101)
    à gauche: 56, à droite: 54
ProcHeader (102)
    à gauche: 57 58, à droite: 56
ProcIdent (103)
    à gauche: 59, à droite: 57 58
FormalArgs (104)
    à gauche: 60, à droite: 58 69
ListFormalArgs (105)
    à gauche: 61 62, à droite: 60 61
FormalArg (106)
    à gauche: 63 64, à droite: 61 62
ValFormalArg (107)
    à gauche: 65, à droite: 63
VarFormalArg (108)
    à gauche: 66, à droite: 64
FuncDecl (109)
    à gauche: 67, à droite: 55
FuncHeader (110)
    à gauche: 68 69, à droite: 67
FuncIdent (111)
    à gauche: 70, à droite: 68 69
FuncResult (112)
    à gauche: 71, à droite: 68 69
BlockCode (113)
    à gauche: 72 73 74, à droite: 3 4 89
ListInstr (114)
    à gauche: 75 76, à droite: 72 73 75 78
Instr (115)
    à gauche: 77 78 79 80 81 82 83 84 85 86 87 88 89, à droite: 75
    76 77 79 80 81
ForDirection (116)
    à gauche: 90 91, à droite: 79
Expression (117)
    à gauche: 92 93 94 95 96 97, à droite: 9 10 77 78 79 80 81 82
    98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
    115 116 117 124 126 127
MathExpr (118)
    à gauche: 98 99 100 101 102 103 104 105 106, à droite: 92
CompExpr (119)
    à gauche: 107 108 109 110 111 112, à droite: 93
BoolExpr (120)
    à gauche: 113 114 115 116, à droite: 94
AtomExpr (121)
    à gauche: 117 118 119 120 121 122, à droite: 95
VarExpr (122)
    à gauche: 123 124 125, à droite: 82 87 96 124 125
ListeExpr (123)
    à gauche: 126 127, à droite: 83 85 86 97 126


État 0

    0 $accept: . Program $end

    KW_PROGRAM  décalage et aller à l'état 1

    Program        aller à l'état 2
    ProgramHeader  aller à l'état 3


État 1

    2 ProgramHeader: KW_PROGRAM . TOK_IDENT

    TOK_IDENT  décalage et aller à l'état 4


État 2

    0 $accept: Program . $end

    $end  décalage et aller à l'état 5


État 3

    1 Program: ProgramHeader . SEP_SCOL Block SEP_DOT

    SEP_SCOL  décalage et aller à l'état 6


État 4

    2 ProgramHeader: KW_PROGRAM TOK_IDENT .

    $défaut  réduction par utilisation de la règle 2 (ProgramHeader)


État 5

    0 $accept: Program $end .

    $défaut  accepter


État 6

    1 Program: ProgramHeader SEP_SCOL . Block SEP_DOT

    KW_CONST  décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 6 (BlockDeclConst)

    Block           aller à l'état 8
    BlockDeclConst  aller à l'état 9


État 7

    5 BlockDeclConst: KW_CONST . ListDeclConst

    TOK_IDENT  décalage et aller à l'état 10

    ListDeclConst  aller à l'état 11
    DeclConst      aller à l'état 12


État 8

    1 Program: ProgramHeader SEP_SCOL Block . SEP_DOT

    SEP_DOT  décalage et aller à l'état 13


État 9

    3 Block: BlockDeclConst . BlockDeclType BlockDeclVar BlockDeclFunc BlockCode

    KW_TYPE  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 12 (BlockDeclType)

    BlockDeclType  aller à l'état 15


État 10

    9 DeclConst: TOK_IDENT . OP_EQ Expression SEP_SCOL
   10          | TOK_IDENT . SEP_DOTS BaseType OP_EQ Expression SEP_SCOL

    SEP_DOTS  décalage et aller à l'état 16
    OP_EQ     décalage et aller à l'état 17


État 11

    5 BlockDeclConst: KW_CONST ListDeclConst .
    7 ListDeclConst: ListDeclConst . DeclConst

    TOK_IDENT  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 5 (BlockDeclConst)

    DeclConst  aller à l'état 18


État 12

    8 ListDeclConst: DeclConst .

    $défaut  réduction par utilisation de la règle 8 (ListDeclConst)


État 13

    1 Program: ProgramHeader SEP_SCOL Block SEP_DOT .

    $défaut  réduction par utilisation de la règle 1 (Program)


État 14

   11 BlockDeclType: KW_TYPE . ListDeclType

    TOK_IDENT  décalage et aller à l'état 19

    ListDeclType  aller à l'état 20
    DeclType      aller à l'état 21


État 15

    3 Block: BlockDeclConst BlockDeclType . BlockDeclVar BlockDeclFunc BlockCode

    KW_VAR  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 44 (BlockDeclVar)

    BlockDeclVar  aller à l'état 23


État 16

   10 DeclConst: TOK_IDENT SEP_DOTS . BaseType OP_EQ Expression SEP_SCOL

    KW_INTEGER  décalage et aller à l'état 24
    KW_REAL     décalage et aller à l'état 25
    KW_BOOLEAN  décalage et aller à l'état 26
    KW_CHAR     décalage et aller à l'état 27
    KW_STRING   décalage et aller à l'état 28

    BaseType  aller à l'état 29


État 17

    9 DeclConst: TOK_IDENT OP_EQ . Expression SEP_SCOL

    KW_NOT       décalage et aller à l'état 30
    SEP_PO       décalage et aller à l'état 31
    OP_ADD       décalage et aller à l'état 32
    OP_SUB       décalage et aller à l'état 33
    TOK_IDENT    décalage et aller à l'état 34
    TOK_INTEGER  décalage et aller à l'état 35
    TOK_REAL     décalage et aller à l'état 36
    TOK_BOOLEAN  décalage et aller à l'état 37
    TOK_CHAR     décalage et aller à l'état 38
    TOK_STRING   décalage et aller à l'état 39

    Expression  aller à l'état 40
    MathExpr    aller à l'état 41
    CompExpr    aller à l'état 42
    BoolExpr    aller à l'état 43
    AtomExpr    aller à l'état 44
    VarExpr     aller à l'état 45


État 18

    7 ListDeclConst: ListDeclConst DeclConst .

    $défaut  réduction par utilisation de la règle 7 (ListDeclConst)


État 19

   15 DeclType: TOK_IDENT . OP_EQ Type SEP_SCOL

    OP_EQ  décalage et aller à l'état 46


État 20

   11 BlockDeclType: KW_TYPE ListDeclType .
   13 ListDeclType: ListDeclType . DeclType

    TOK_IDENT  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 11 (BlockDeclType)

    DeclType  aller à l'état 47


État 21

   14 ListDeclType: DeclType .

    $défaut  réduction par utilisation de la règle 14 (ListDeclType)


État 22

   43 BlockDeclVar: KW_VAR . ListDeclVar

    TOK_IDENT  décalage et aller à l'état 48

    ListDeclVar  aller à l'état 49
    DeclVar      aller à l'état 50
    ListIdent    aller à l'état 51


État 23

    3 Block: BlockDeclConst BlockDeclType BlockDeclVar . BlockDeclFunc BlockCode

    KW_PROC  décalage et aller à l'état 52
    KW_FUNC  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 51 (BlockDeclFunc)

    BlockDeclFunc  aller à l'état 54
    ListDeclFunc   aller à l'état 55
    DeclFunc       aller à l'état 56
    ProcDecl       aller à l'état 57
    ProcHeader     aller à l'état 58
    ProcIdent      aller à l'état 59
    FuncDecl       aller à l'état 60
    FuncHeader     aller à l'état 61
    FuncIdent      aller à l'état 62


État 24

   24 BaseType: KW_INTEGER .

    $défaut  réduction par utilisation de la règle 24 (BaseType)


État 25

   25 BaseType: KW_REAL .

    $défaut  réduction par utilisation de la règle 25 (BaseType)


État 26

   26 BaseType: KW_BOOLEAN .

    $défaut  réduction par utilisation de la règle 26 (BaseType)


État 27

   27 BaseType: KW_CHAR .

    $défaut  réduction par utilisation de la règle 27 (BaseType)


État 28

   28 BaseType: KW_STRING .

    $défaut  réduction par utilisation de la règle 28 (BaseType)


État 29

   10 DeclConst: TOK_IDENT SEP_DOTS BaseType . OP_EQ Expression SEP_SCOL

    OP_EQ  décalage et aller à l'état 63


État 30

  116 BoolExpr: KW_NOT . Expression

    KW_NOT       décalage et aller à l'état 30
    SEP_PO       décalage et aller à l'état 31
    OP_ADD       décalage et aller à l'état 32
    OP_SUB       décalage et aller à l'état 33
    TOK_IDENT    décalage et aller à l'état 34
    TOK_INTEGER  décalage et aller à l'état 35
    TOK_REAL     décalage et aller à l'état 36
    TOK_BOOLEAN  décalage et aller à l'état 37
    TOK_CHAR     décalage et aller à l'état 38
    TOK_STRING   décalage et aller à l'état 39

    Expression  aller à l'état 64
    MathExpr    aller à l'état 41
    CompExpr    aller à l'état 42
    BoolExpr    aller à l'état 43
    AtomExpr    aller à l'état 44
    VarExpr     aller à l'état 45


État 31

  117 AtomExpr: SEP_PO . Expression SEP_PF

    KW_NOT       décalage et aller à l'état 30
    SEP_PO       décalage et aller à l'état 31
    OP_ADD       décalage et aller à l'état 32
    OP_SUB       décalage et aller à l'état 33
    TOK_IDENT    décalage et aller à l'état 34
    TOK_INTEGER  décalage et aller à l'état 35
    TOK_REAL     décalage et aller à l'état 36
    TOK_BOOLEAN  décalage et aller à l'état 37
    TOK_CHAR     décalage et aller à l'état 38
    TOK_STRING   décalage et aller à l'état 39

    Expression  aller à l'état 65
    MathExpr    aller à l'état 41
    CompExpr    aller à l'état 42
    BoolExpr    aller à l'état 43
    AtomExpr    aller à l'état 44
    VarExpr     aller à l'état 45


État 32

  106 MathExpr: OP_ADD . Expression

    KW_NOT       décalage et aller à l'état 30
    SEP_PO       décalage et aller à l'état 31
    OP_ADD       décalage et aller à l'état 32
    OP_SUB       décalage et aller à l'état 33
    TOK_IDENT    décalage et aller à l'état 34
    TOK_INTEGER  décalage et aller à l'état 35
    TOK_REAL     décalage et aller à l'état 36
    TOK_BOOLEAN  décalage et aller à l'état 37
    TOK_CHAR     décalage et aller à l'état 38
    TOK_STRING   décalage et aller à l'état 39

    Expression  aller à l'état 66
    MathExpr    aller à l'état 41
    CompExpr    aller à l'état 42
    BoolExpr    aller à l'état 43
    AtomExpr    aller à l'état 44
    VarExpr     aller à l'état 45


État 33

  105 MathExpr: OP_SUB . Expression

    KW_NOT       décalage et aller à l'état 30
    SEP_PO       décalage et aller à l'état 31
    OP_ADD       décalage et aller à l'état 32
    OP_SUB       décalage et aller à l'état 33
    TOK_IDENT    décalage et aller à l'état 34
    TOK_INTEGER  décalage et aller à l'état 35
    TOK_REAL     décalage et aller à l'état 36
    TOK_BOOLEAN  décalage et aller à l'état 37
    TOK_CHAR     décalage et aller à l'état 38
    TOK_STRING   décalage et aller à l'état 39

    Expression  aller à l'état 67
    MathExpr    aller à l'état 41
    CompExpr    aller à l'état 42
    BoolExpr    aller à l'état 43
    AtomExpr    aller à l'état 44
    VarExpr     aller à l'état 45


État 34

   97 Expression: TOK_IDENT . SEP_PO ListeExpr SEP_PF
  123 VarExpr: TOK_IDENT .

    SEP_PO  décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 123 (VarExpr)


État 35

  118 AtomExpr: TOK_INTEGER .

    $défaut  réduction par utilisation de la règle 118 (AtomExpr)


État 36

  119 AtomExpr: TOK_REAL .

    $défaut  réduction par utilisation de la règle 119 (AtomExpr)


État 37

  120 AtomExpr: TOK_BOOLEAN .

    $défaut  réduction par utilisation de la règle 120 (AtomExpr)


État 38

  121 AtomExpr: TOK_CHAR .

    $défaut  réduction par utilisation de la règle 121 (AtomExpr)


État 39

  122 AtomExpr: TOK_STRING .

    $défaut  réduction par utilisation de la règle 122 (AtomExpr)


État 40

    9 DeclConst: TOK_IDENT OP_EQ Expression . SEP_SCOL
   98 MathExpr: Expression . OP_ADD Expression
   99         | Expression . OP_SUB Expression
  100         | Expression . OP_MUL Expression
  101         | Expression . OP_SLASH Expression
  102         | Expression . KW_DIV Expression
  103         | Expression . KW_MOD Expression
  104         | Expression . OP_EXP Expression
  107 CompExpr: Expression . OP_EQ Expression
  108         | Expression . OP_NEQ Expression
  109         | Expression . OP_LT Expression
  110         | Expression . OP_LTE Expression
  111         | Expression . OP_GT Expression
  112         | Expression . OP_GTE Expression
  113 BoolExpr: Expression . KW_AND Expression
  114         | Expression . KW_OR Expression
  115         | Expression . KW_XOR Expression

    KW_DIV    décalage et aller à l'état 69
    KW_MOD    décalage et aller à l'état 70
    KW_AND    décalage et aller à l'état 71
    KW_OR     décalage et aller à l'état 72
    KW_XOR    décalage et aller à l'état 73
    SEP_SCOL  décalage et aller à l'état 74
    OP_EQ     décalage et aller à l'état 75
    OP_NEQ    décalage et aller à l'état 76
    OP_LT     décalage et aller à l'état 77
    OP_LTE    décalage et aller à l'état 78
    OP_GT     décalage et aller à l'état 79
    OP_GTE    décalage et aller à l'état 80
    OP_ADD    décalage et aller à l'état 81
    OP_SUB    décalage et aller à l'état 82
    OP_MUL    décalage et aller à l'état 83
    OP_SLASH  décalage et aller à l'état 84
    OP_EXP    décalage et aller à l'état 85


État 41

   92 Expression: MathExpr .

    $défaut  réduction par utilisation de la règle 92 (Expression)


État 42

   93 Expression: CompExpr .

    $défaut  réduction par utilisation de la règle 93 (Expression)


État 43

   94 Expression: BoolExpr .

    $défaut  réduction par utilisation de la règle 94 (Expression)


État 44

   95 Expression: AtomExpr .

    $défaut  réduction par utilisation de la règle 95 (Expression)


État 45

   96 Expression: VarExpr .
  124 VarExpr: VarExpr . SEP_CO Expression SEP_CF
  125        | VarExpr . SEP_DOT TOK_IDENT

    SEP_DOT  décalage et aller à l'état 86
    SEP_CO   décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 96 (Expression)


État 46

   15 DeclType: TOK_IDENT OP_EQ . Type SEP_SCOL

    KW_ARRAY     décalage et aller à l'état 88
    KW_RECORD    décalage et aller à l'état 89
    KW_INTEGER   décalage et aller à l'état 24
    KW_REAL      décalage et aller à l'état 25
    KW_BOOLEAN   décalage et aller à l'état 26
    KW_CHAR      décalage et aller à l'état 27
    KW_STRING    décalage et aller à l'état 28
    SEP_PO       décalage et aller à l'état 90
    TOK_IDENT    décalage et aller à l'état 91
    TOK_INTEGER  décalage et aller à l'état 92
    TOK_CHAR     décalage et aller à l'état 93

    Type        aller à l'état 94
    UserType    aller à l'état 95
    SimpleType  aller à l'état 96
    BaseType    aller à l'état 97
    EnumType    aller à l'état 98
    InterType   aller à l'état 99
    InterBase   aller à l'état 100
    ArrayType   aller à l'état 101
    RecordType  aller à l'état 102


État 47

   13 ListDeclType: ListDeclType DeclType .

    $défaut  réduction par utilisation de la règle 13 (ListDeclType)


État 48

   49 ListIdent: TOK_IDENT .

    $défaut  réduction par utilisation de la règle 49 (ListIdent)


État 49

   43 BlockDeclVar: KW_VAR ListDeclVar .
   45 ListDeclVar: ListDeclVar . DeclVar

    TOK_IDENT  décalage et aller à l'état 48

    $défaut  réduction par utilisation de la règle 43 (BlockDeclVar)

    DeclVar    aller à l'état 103
    ListIdent  aller à l'état 51


État 50

   46 ListDeclVar: DeclVar .

    $défaut  réduction par utilisation de la règle 46 (ListDeclVar)


État 51

   47 DeclVar: ListIdent . SEP_DOTS SimpleType SEP_SCOL
   48 ListIdent: ListIdent . SEP_COMMA TOK_IDENT

    SEP_DOTS   décalage et aller à l'état 104
    SEP_COMMA  décalage et aller à l'état 105


État 52

   59 ProcIdent: KW_PROC . TOK_IDENT

    TOK_IDENT  décalage et aller à l'état 106


État 53

   70 FuncIdent: KW_FUNC . TOK_IDENT

    TOK_IDENT  décalage et aller à l'état 107


État 54

    3 Block: BlockDeclConst BlockDeclType BlockDeclVar BlockDeclFunc . BlockCode

    KW_BEGIN  décalage et aller à l'état 108

    BlockCode  aller à l'état 109


État 55

   50 BlockDeclFunc: ListDeclFunc . SEP_SCOL
   52 ListDeclFunc: ListDeclFunc . SEP_SCOL DeclFunc

    SEP_SCOL  décalage et aller à l'état 110


État 56

   53 ListDeclFunc: DeclFunc .

    $défaut  réduction par utilisation de la règle 53 (ListDeclFunc)


État 57

   54 DeclFunc: ProcDecl .

    $défaut  réduction par utilisation de la règle 54 (DeclFunc)


État 58

   56 ProcDecl: ProcHeader . SEP_SCOL BlockSimple

    SEP_SCOL  décalage et aller à l'état 111


État 59

   57 ProcHeader: ProcIdent .
   58           | ProcIdent . FormalArgs

    SEP_PO  décalage et aller à l'état 112

    $défaut  réduction par utilisation de la règle 57 (ProcHeader)

    FormalArgs  aller à l'état 113


État 60

   55 DeclFunc: FuncDecl .

    $défaut  réduction par utilisation de la règle 55 (DeclFunc)


État 61

   67 FuncDecl: FuncHeader . SEP_SCOL BlockSimple

    SEP_SCOL  décalage et aller à l'état 114


État 62

   68 FuncHeader: FuncIdent . FuncResult
   69           | FuncIdent . FormalArgs FuncResult

    SEP_DOTS  décalage et aller à l'état 115
    SEP_PO    décalage et aller à l'état 112

    FormalArgs  aller à l'état 116
    FuncResult  aller à l'état 117


État 63

   10 DeclConst: TOK_IDENT SEP_DOTS BaseType OP_EQ . Expression SEP_SCOL

    KW_NOT       décalage et aller à l'état 30
    SEP_PO       décalage et aller à l'état 31
    OP_ADD       décalage et aller à l'état 32
    OP_SUB       décalage et aller à l'état 33
    TOK_IDENT    décalage et aller à l'état 34
    TOK_INTEGER  décalage et aller à l'état 35
    TOK_REAL     décalage et aller à l'état 36
    TOK_BOOLEAN  décalage et aller à l'état 37
    TOK_CHAR     décalage et aller à l'état 38
    TOK_STRING   décalage et aller à l'état 39

    Expression  aller à l'état 118
    MathExpr    aller à l'état 41
    CompExpr    aller à l'état 42
    BoolExpr    aller à l'état 43
    AtomExpr    aller à l'état 44
    VarExpr     aller à l'état 45


État 64

   98 MathExpr: Expression . OP_ADD Expression
   99         | Expression . OP_SUB Expression
  100         | Expression . OP_MUL Expression
  101         | Expression . OP_SLASH Expression
  102         | Expression . KW_DIV Expression
  103         | Expression . KW_MOD Expression
  104         | Expression . OP_EXP Expression
  107 CompExpr: Expression . OP_EQ Expression
  108         | Expression . OP_NEQ Expression
  109         | Expression . OP_LT Expression
  110         | Expression . OP_LTE Expression
  111         | Expression . OP_GT Expression
  112         | Expression . OP_GTE Expression
  113 BoolExpr: Expression . KW_AND Expression
  114         | Expression . KW_OR Expression
  115         | Expression . KW_XOR Expression
  116         | KW_NOT Expression .

    OP_EXP  décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 116 (BoolExpr)


État 65

   98 MathExpr: Expression . OP_ADD Expression
   99         | Expression . OP_SUB Expression
  100         | Expression . OP_MUL Expression
  101         | Expression . OP_SLASH Expression
  102         | Expression . KW_DIV Expression
  103         | Expression . KW_MOD Expression
  104         | Expression . OP_EXP Expression
  107 CompExpr: Expression . OP_EQ Expression
  108         | Expression . OP_NEQ Expression
  109         | Expression . OP_LT Expression
  110         | Expression . OP_LTE Expression
  111         | Expression . OP_GT Expression
  112         | Expression . OP_GTE Expression
  113 BoolExpr: Expression . KW_AND Expression
  114         | Expression . KW_OR Expression
  115         | Expression . KW_XOR Expression
  117 AtomExpr: SEP_PO Expression . SEP_PF

    KW_DIV    décalage et aller à l'état 69
    KW_MOD    décalage et aller à l'état 70
    KW_AND    décalage et aller à l'état 71
    KW_OR     décalage et aller à l'état 72
    KW_XOR    décalage et aller à l'état 73
    SEP_PF    décalage et aller à l'état 119
    OP_EQ     décalage et aller à l'état 75
    OP_NEQ    décalage et aller à l'état 76
    OP_LT     décalage et aller à l'état 77
    OP_LTE    décalage et aller à l'état 78
    OP_GT     décalage et aller à l'état 79
    OP_GTE    décalage et aller à l'état 80
    OP_ADD    décalage et aller à l'état 81
    OP_SUB    décalage et aller à l'état 82
    OP_MUL    décalage et aller à l'état 83
    OP_SLASH  décalage et aller à l'état 84
    OP_EXP    décalage et aller à l'état 85


État 66

   98 MathExpr: Expression . OP_ADD Expression
   99         | Expression . OP_SUB Expression
  100         | Expression . OP_MUL Expression
  101         | Expression . OP_SLASH Expression
  102         | Expression . KW_DIV Expression
  103         | Expression . KW_MOD Expression
  104         | Expression . OP_EXP Expression
  106         | OP_ADD Expression .
  107 CompExpr: Expression . OP_EQ Expression
  108         | Expression . OP_NEQ Expression
  109         | Expression . OP_LT Expression
  110         | Expression . OP_LTE Expression
  111         | Expression . OP_GT Expression
  112         | Expression . OP_GTE Expression
  113 BoolExpr: Expression . KW_AND Expression
  114         | Expression . KW_OR Expression
  115         | Expression . KW_XOR Expression

    OP_EXP  décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 106 (MathExpr)


État 67

   98 MathExpr: Expression . OP_ADD Expression
   99         | Expression . OP_SUB Expression
  100         | Expression . OP_MUL Expression
  101         | Expression . OP_SLASH Expression
  102         | Expression . KW_DIV Expression
  103         | Expression . KW_MOD Expression
  104         | Expression . OP_EXP Expression
  105         | OP_SUB Expression .
  107 CompExpr: Expression . OP_EQ Expression
  108         | Expression . OP_NEQ Expression
  109         | Expression . OP_LT Expression
  110         | Expression . OP_LTE Expression
  111         | Expression . OP_GT Expression
  112         | Expression . OP_GTE Expression
  113 BoolExpr: Expression . KW_AND Expression
  114         | Expression . KW_OR Expression
  115         | Expression . KW_XOR Expression

    OP_EXP  décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 105 (MathExpr)


État 68

   97 Expression: TOK_IDENT SEP_PO . ListeExpr SEP_PF
